--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,9 +35,9 @@ jobs:
         run: docker pull leke1995/swiggs:latest
       - name: Image scan
         run: trivy image leke1995/swiggs:latest > trivyimagedeploy.txt
-      - name: Deploy to container
-        run: docker run -d --name swiggs -p 3000:3000 leke1995/swiggs:latest
-      - name: Update kubeconfig
-        run: aws eks --region us-east-1 update-kubeconfig --name EKS_CLOUD
-      - name: Deploy to Kubernetes
-        run: kubectl apply -f deployment-service.yml
+     # - name: Deploy to container
+     #   run: docker run -d --name swiggs -p 3000:3000 leke1995/swiggs:latest
+    # - name: Update kubeconfig
+     #   run: aws eks --region us-east-1 update-kubeconfig --name EKS_CLOUD
+     # - name: Deploy to Kubernetes
+   #     run: kubectl apply -f deployment-service.yml
