--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,4 +40,4 @@ jobs:
       - name: Update kubeconfig
         run: aws eks --region us-east-1 update-kubeconfig --name EKS_CLOUD
       - name: Deploy to Kubernetes
-        run: kubectl apply -f deployment-service.yml
+        run: kubectl apply -f deployment-service.yml2. commit the changes and this will deploy the image locally on the base server
