--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - main
 
-
 jobs:
   build:
     name: Build3
@@ -20,7 +19,6 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       - name: NPM Install
         run: npm install
-        
       - name: Docker build and push
         run: |
           # Run commands to build and push Docker images
@@ -30,9 +28,21 @@ jobs:
           docker push leke1995/swiggs:latest
         env:
           DOCKER_CLI_ACI: 1
-      # If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
-      # - uses: sonarsource/sonarqube-quality-gate-action@master
-      #   timeout-minutes: 5
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  deploy:
+    needs: build
+    runs-on: [self-hosted]
+    steps:
+      - name: Docker pull image
+        run: docker pull leke1995/swiggs:latest
+      - name: Image scan
+        run: trivy image leke1995/swiggs:latest > trivyimagedeploy.txt
+      - name: Deploy to container
+        run: docker run -d --name swiggs -p 3000:3000 leke1995/swiggs:latest
+
+  # If you wish to fail your job when the Quality Gate is red, uncomment the
+  # following lines. This would typically be used to fail a deployment.
+  # - uses: sonarsource/sonarqube-quality-gate-action@master
+  #   timeout-minutes: 5
+  #   env:
+  #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
