--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,10 @@ jobs:
         run: trivy image leke1995/swiggs:latest > trivyimagedeploy.txt
       - name: Deploy to container
         run: docker run -d --name swiggs -p 3000:3000 leke1995/swiggs:latest
+      - name: Update kubeconfig
+        run: aws eks --region us-east-1 update-kubeconfig --name EKS_CLOUD
+      - name: Deploy to kubernetes
+        run: kubectl apply -f deployment-service.yml2
 
   # If you wish to fail your job when the Quality Gate is red, uncomment the
   # following lines. This would typically be used to fail a deployment.
